_scss/_main.scss
/*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^
*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^* BASE
^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*/

body {
  background: $color-background;
  color: $color-text;
}

html, body {
  width: 100%;
  height: 100%;
}

.paused .orbit,
.paused .satellite {
  -webkit-animation-play-state: paused !important;
  animation-play-state: paused !important;
}

img {
  max-width: 100%;
  height: auto;
}

a,
a:visited {
  color: $color-link;
  text-decoration: underline;
  transition: $transition-out;
}

a:hover,
a:active {
  color: $color-link-hover;
  transition: $transition-in;
  text-decoration: none;
}

a:active {
  transform: scale(0.95);
  display: inline-block;
}

a[href^="#"] {
  outline: 0;
}

.anchor-offset {
  position: relative;
  top: -$nav-height;
  left: 0;
  width: 0;
  height: 0;
}

/*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^
*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^* LAYOUT
^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*/

section {
  margin-bottom: $lead-triple;

  .row {
    border-top: 3px double $color-text-light;
    padding-top: $lead-triple;
  }
}

.row {
  width: 90%;
  margin: 0 auto;
}

.__fixed {
  .mask {
    position: fixed;
  }
}

.__top {
  .link-bank a {
    color: $color-link;
  }
  
  .link-to-top.button {
    color: $color-link;
    border-color: $color-link;
    transform: rotate(0deg);
    transition: all 0.35s ease-in-out;

    &:hover {
      transform: rotate(0deg) scale(0.95);
      color: #fff;
      transition: all 0.35s ease-in-out;
    }

    &:active {
      transform: rotate(0deg) scale(0.85);
      transition: all 0.35s ease-in-out;
    }
  }
}

.mask {
  position: absolute;
  height: $nav-height;
  width: 100%;
  top: 0;
  left: 0;
  overflow: hidden;
  z-index: 10;
}

.mask-inner {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: $nav-height;
}

.site-nav {
  position: fixed;
  top: 0;
  left: 0;
  height: $nav-height;
  width: 100%;
  z-index: 11;

  & > div {
    height: 100%;
  }
}

.site-nav-bg {
  background: #fff;
  width: 100%;
  height: $nav-height;
  border-bottom: 1px solid lighten($color-text-light, 25%);
  box-sizing: border-box;
}

.logo {
  z-index: 12;

  &:active {
    & ~ .mask .logo-bg {
      transform: scale(0.95);
      transition: $transition-in;
    }
  }
}

.logo-bg {
  transition: $transition-out;
}

.logo,
.logo-bg {
  position: fixed;
  height: $nav-height;
  width: $nav-height;
  top: 0;
  left: 0;
  padding: 1em;
  box-sizing: border-box;
}

.link-bank {
  a {
    padding: $line-height;
    color: #fff;
    transition: all 0.35s ease-in-out;

    &:first-child {
      margin-left: -$line-height;
    }
  }
}

.site-main {
  padding: $lead-quadruple 0 0;
  position: relative;

  section:first-child {
    .row {
      border-top: none;
      padding-top: 0;
    }  
  }
}

.content {
  .side-column {
    text-align: right;
    position: relative;
  }

  .main-column {
    padding-top: $lead-single;
    position: relative;

    .meta-text:first-child {
      margin: -$line-height 0 0;
    }
  }
}

.pull-column {
  position: absolute;
  left: -$column-width * 8.58;
  width: $column-width * 8.58;
  text-align: right;
  padding: 0 $half-gutter-width 0;
  box-sizing: border-box;
}

.stretch-container {
  margin-left: -$half-gutter-width;
  margin-right: -$half-gutter-width;
  width: 188%;
  position: relative;
  left: -78.5%;
}

/*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^
*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^* MODULES
^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*^*/

.orrry-description {
  z-index: 20;
  color: #fff;
  text-align: right;
  height: 100%;
  position: relative;
  
  & > div {
    height: 100%;
  }

  a {
    color: #fff;
    border-color: #fff;

    &:after {
      background: rgba(#fff, 0);
    }

    &:last-child {
      margin-right: 0;
    }

    &:hover {
      border-color: #fff;
      color: $color-12;

      &:after {
        background: rgba(#fff, 1);
        border-color: rgba(#fff, 1);
      }

      &.icon-pause:before {
        content: 'f';
      }

      &.icon-information:before {
        content: 'k';
      }
    }
  }
}

.description-holder {
  opacity: 0;
}

.label {
  @include transition(opacity, 0.3s, ease-in);
  @extend .meta-text;
  color: $color-text;
  position: fixed;
  top: 0;
  left: 0;
  padding: 0.45em 1.25em;
  background: rgba($color-background, 0.65);
  border-radius: 2px;
  font-weight: 100;
  z-index: 100;
  letter-spacing: 0.25em;
  text-transform: uppercase;
  opacity: 0;
  display: none;

  .symbol {
    margin-right: 1em;
  }
}

.button {
  padding: $font-size-small-1;
  border-radius: 50%;
  border: 1px solid $color-link;
  background: transparent;
  text-decoration: none;
  text-align: center;
  position: relative;
  transition: $transition-out;

  &:after {
    content: '';
    display: block;
    background: rgba($color-link-hover, 0);
    border: 1px solid rgba($color-link-hover, 0);
    z-index: 1;
    width: 100%;
    height: 100%;
    position: absolute;
    left: -1px;
    top: -1px;
    border-radius: 50%;
    transform: scale(0.4);
    transition: $transition-out;
  }

  &:before {
    position: relative;
    z-index: 2;
  }

  &:hover {
    color: #fff;
    transform: scale(0.95);
    transition: $transition-in;
    border-color: $color-link-hover;

    &:after {
      background: rgba($color-link-hover, 1);
      border-color: rgba($color-link-hover, 1);
      transform: scale(1);
      transition: $transition-in;
    }
  }

  &:active {
    transform: scale(0.85);
  }
}

.social {
  padding-top: $lead-single;
}

[class*="icon-"] {
  &.button {
    padding: ($font-size-small-1 + 1px) $font-size-small-1 ($font-size-small-1 - 1px);
    width: $line-height;
    display: inline-block;
    margin-right: $lead-single;
  }
}

.link-to-top.button {
  position: absolute;
  top: $font-size;
  right: $font-size;
  margin: 0;
  transform: rotate(-180deg);
  transition: all 0.35s ease-in-out;
  color: #fff;
  border-color: #fff;

  &:hover {
    transform: rotate(-180deg) scale(0.95);
    transition: all 0.35s ease-in-out;
  }

  &:active {
    transform: rotate(-180deg) scale(0.85);
    transition: all 0.35s ease-in-out;
  }
}

.site-footer {
  background: $color-footer;
  color: $color-footer-text;

  a {
    color: $color-footer-link;

    &:hover {
      color: $color-footer-link-hover;
    }
  }
}

